# jiang-lu-neural-operator-chaos

./: .gitignore  .pre-commit-config.yaml  Makefile  config.json  configuration.py  pyproject.toml  utils.py
.github/workflows/: ci.yml  dependencies.yml  docs.yml  release.yml
dataloader/: dataloader_l96.py
eval_scripts/: LE.py  LE_l96.py  eval_LE.py  eval_l96.py  eval_utils.py  read_LE.py
l96_data_x/: generate_data.py  l96.py
models/: condition_utils.py  fno_1d_new.py  kse_resnet.py  l96x_resnet.py  metricL_utils.py
scripts/: CL_utils.py  OT_utils.py  cal_stats_l96.py  dataloader_init.py  log.py  main.py  train_utils.py
src/app/: __init__.py  configuration.py  exceptions.py
tests/: test_configuration.py
