[project]
name = "jiang-lu-neural-operator-chaos"
version = "0.1.0"
description = "Implementing neural operator methods for chaotic dynamical systems, based on Jiang, Lu, Orlova, & Willett (2024). Provides tools for parameter estimation using neural network approaches."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Ruoxi Jiang", email = "roxie62@uchicago.edu" },
    { name = "Peter Y. Lu", email = "lup@uchicago.edu" },
    { name = "Elena Orlova", email = "eorlova@uchicago.edu" },
    { name = "Rebecca Willett", email = "willett@uchicago.edu" },
]
dependencies = [
    "neural_chaos"
]

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/app",
]

[tool.uv.workspace]
members = ["packages/neural_chaos"]

[tool.uv.sources]
neural_chaos = { workspace = true }
